--- a/styles/style.css
+++ b/styles/style.css
@@ -33,20 +33,23 @@ body {
 }
 
 .player {
-    margin-left: 80px;
-    margin-right: 80px;
-    margin-top: 40px;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 10px;
+    padding: 25px 0;
+    font-size: 35px;
     text-align: center;
     background-color: rgb(230, 219, 6);
 }
 
 .btn {
     margin-left: 45%;
+    margin-right: 150px;
     margin-top: 50px;
     height: 50px;
-    width: 100px;
+    width: 130px;
     background-color: rgb(210, 156, 62);
     text-align: center;
-    font-size: large;
+    font-size: 30px;
     font-weight: bold;
 }
